--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lab 4 Milestone 1</string>
+    <string name="stop">STOP</string>
+    <string name="start">START</string>
 </resources>
